fixed hero title align

--- a/homepage/assets/css/components/hero.css
+++ b/homepage/assets/css/components/hero.css
@@ -20,6 +20,7 @@
   z-index: 0;
   font-family: cursive;
   font-size: 7rem;
+  text-align: center;
 }
 
 #hero-subtitle {
